--- a/app/src/main/res/drawable/ic_solar_users_group.xml
+++ b/app/src/main/res/drawable/ic_solar_users_group.xml
@@ -4,20 +4,31 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:pathData="M13,6a4,4 0,1 1,-8 0a4,4 0,1 1,8 0z"
-        android:strokeColor="#FF000000"
-        android:strokeWidth="1.5" />
-    <path
-        android:pathData="M15,9a3,3 0,1 0,0 -6"
+        android:pathData="M12,6m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0"
         android:strokeColor="#FF000000"
         android:strokeLineCap="round"
         android:strokeWidth="1.5" />
     <path
-        android:pathData="M9,17c0,-2.209 -3.134,-4 -7,-4s-7,1.791 -7,4s3.134,4 7,4s7,-1.791 7,-4z"
+        android:pathData="M20,9c0,1.657 -1.343,3 -3,3"
+        android:strokeColor="#FF000000"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.5" />
+    <path
+        android:pathData="M4,9c0,1.657 1.343,3 3,3"
+        android:strokeColor="#FF000000"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.5" />
+    <path
+        android:pathData="M12,13c-3.866,0 -7,1.791 -7,4s3.134,4 7,4s7,-1.791 7,-4s-3.134,-4 -7,-4z"
         android:strokeColor="#FF000000"
         android:strokeWidth="1.5" />
     <path
-        android:pathData="M18,14c1.754,0.385 3,1.359 3,2.5c0,1.03 -1.014,1.923 -2.5,2.37"
+        android:pathData="M19,13.784c1.954,0.612 3,1.967 3,3.216c0,2.209 -2,4 -3,4"
+        android:strokeColor="#FF000000"
+        android:strokeLineCap="round"
+        android:strokeWidth="1.5" />
+    <path
+        android:pathData="M5,13.784c-1.954,0.612 -3,1.967 -3,3.216c0,2.209 2,4 3,4"
         android:strokeColor="#FF000000"
         android:strokeLineCap="round"
         android:strokeWidth="1.5" />
