--- a/app/src/main/res/drawable/ic_solar_users_group.xml
+++ b/app/src/main/res/drawable/ic_solar_users_group.xml
@@ -10,17 +10,17 @@
         android:strokeWidth="1.5" />
     <path
         android:pathData="M20,9c0,1.657 -1.343,3 -3,3"
-        android:strokeColor="#FF000000"
+        android:strokeColor="#CA0505"
         android:strokeLineCap="round"
         android:strokeWidth="1.5" />
     <path
         android:pathData="M4,9c0,1.657 1.343,3 3,3"
-        android:strokeColor="#FF000000"
+        android:strokeColor="#C0CA33"
         android:strokeLineCap="round"
         android:strokeWidth="1.5" />
     <path
         android:pathData="M12,13c-3.866,0 -7,1.791 -7,4s3.134,4 7,4s7,-1.791 7,-4s-3.134,-4 -7,-4z"
-        android:strokeColor="#FF000000"
+        android:strokeColor="#FBFBFB"
         android:strokeWidth="1.5" />
     <path
         android:pathData="M19,13.784c1.954,0.612 3,1.967 3,3.216c0,2.209 -2,4 -3,4"
